# flow

./: .gitignore  Cargo.toml  README.md
.spec/: architecture.md  cli.md  core.md  meta.md
crates/app/: Cargo.toml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: common.rs  error.rs  lib.rs
crates/cli/src/commands/: add.rs  clean.rs  init.rs  mod.rs  open.rs
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  graph.rs  lib.rs  space.rs
crates/desktop/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
flow/: Cargo.toml
flow/src/: main.rs
