[workspace]
members = [
    "flow",
    "crates/core",
    "crates/app",
    "crates/cli",
    "crates/tui",
    "crates/desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Michael Baudler hello@mrbandler.dev>"]
license = "MIT"
repository = "https://github.com/mrbandler/flow"

[workspace.dependencies]
loro = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
